--- a/prototype/website/src/game-app/ui/quest-log.html
+++ b/prototype/website/src/game-app/ui/quest-log.html
@@ -223,6 +223,7 @@
             }
 
             _open() {
+                input.block();
                 return this.$.container.style.display === 'block';
             }
 
@@ -251,6 +252,7 @@
             }
 
             _hide() {
+                input.unblock();
                 this.$.container.style.display = 'none';
             }
         }
