--- a/prototype/website/src/game-app/ui/friend-view.html
+++ b/prototype/website/src/game-app/ui/friend-view.html
@@ -43,19 +43,6 @@
                 -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
             }
 
-            .dialog-entity {
-                margin-top: 8px;
-                padding-left: 16px;
-                display: block;
-                color: var(--paper-grey-300);
-            }
-
-            #dialog-close {
-                position: absolute;
-                right: 8px;
-                top: 8px;
-            }
-
             .friend-item {
                 padding: 6px;
                 font-size: small;
@@ -314,7 +301,6 @@
 
             ready() {
                 super.ready();
-                this.friends = new Social();
 
                 application.onGameLoaded(() => {
                     input.onKeysListener({
@@ -348,7 +334,6 @@
             _unread(friend) {
                 this.unread[friend] = this.unread[friend] || 0;
                 let unread = this.unread[friend];
-                console.log('unread trigger: ' + unread);
                 return (unread > 0) ? unread : '';
             }
 
@@ -430,6 +415,7 @@
                         this.messages[this.chat] = [];
                     }
                     this.thread = this.messages[this.chat];
+                    this.notifySplices('thread', this.thread.splice());
                     this._scroll();
                 }
             }
@@ -455,7 +441,7 @@
             }
 
             _list() {
-                this.friends.list(event => {
+                social.friend_list(event => {
                     this.list = event.friends;
                     this.requests = event.requests;
                     this.online = event.online;
@@ -467,14 +453,14 @@
             }
 
             _pending() {
-                this.friends.pending(event => {
+                social.friend_pending(event => {
                     this.pending = event.pending;
                     this.notifyPath('pending');
                 });
             }
 
             _accept(e) {
-                this.friends.accept(event => {
+                social.friend_accept(event => {
                     this.list = event.friends;
                     this.requests = event.requests;
                     this._pending();
@@ -498,7 +484,7 @@
             }
 
             _reject(e) {
-                this.friends.reject(event => {
+                social.friend_reject(event => {
                     this._list();
                 }, e.model.request);
             }
@@ -511,7 +497,7 @@
 
             _requestSuggested(event) {
                 if (this.friend.length >= 1) {
-                    this.friends.suggestion(event => {
+                    social.friend_suggestion(event => {
                         this.suggestions = event.suggestions;
                         this.notifyPath("suggestions");
                     }, this.friend);
@@ -535,7 +521,7 @@
             }
 
             _sendRequest(target) {
-                this.friends.request(event => {
+                social.friend_request(event => {
                     application.publish('notification', `Friend request sent to ${target}.`);
                     this._pending();
                 }, target);
@@ -561,7 +547,7 @@
 
             _message() {
                 if (this.message.length > 0) {
-                    this.friends.message((e) => {
+                    social.friend_message((e) => {
                         this.thread.push({
                             message: this.message,
                             from: application.token.domain,
