--- a/prototype/website/src/game-app/ui/party-view.html
+++ b/prototype/website/src/game-app/ui/party-view.html
@@ -2,7 +2,6 @@
 <link rel="import" href="../../../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../../bower_components/polymer/lib/mixins/gesture-event-listeners.html">
-<link rel="import" href="../../../bower_components/paper-tooltip/paper-tooltip.html">
 
 <link rel="import" href="./player-status.html">
 
@@ -28,6 +27,11 @@
                 z-index: 400;
             }
 
+            #dialog {
+                min-height: 192px;
+                min-width: 326px;
+            }
+
             .member {
                 position: relative;
                 margin-bottom: 16px;
@@ -35,12 +39,46 @@
                 left: 0;
             }
 
+            .invite-text {
+                font-size: small;
+                text-align: center;
+                display: block;
+                margin: 32px auto auto;
+            }
+
+            .response {
+                display: flex;
+                position: absolute;
+                bottom: 0px;
+                left: 0px;
+                right: 0px;
+            }
+
         </style>
+
+        <div class="dialog-container" id="container">
+            <div class="dialog-overlay"></div>
+
+            <paper-material elevation="3" class="interface-box noselect dialog-center" id="dialog">
+                <iron-icon icon="icons:close" id="dialog-close" on-down="_decline"></iron-icon>
+
+                <span class="dialog-entity">Party invite</span>
+
+                <span class="invite-text">From [[invite.from]], do you accept?</span>
+
+                <div class="response">
+                    <paper-button on-tap="_decline">DECLINE</paper-button>
+                    <paper-button primary raised on-tap="_accept">ACCEPT</paper-button>
+                </div>
+            </paper-material>
+
+        </div>
 
         <div class="container">
             <template is="dom-repeat" items="[[members]]" as="member">
-                <player-status target="[[member]]" class="member" style$="[[_index(index)]]"
-                               compact></player-status>
+                <player-status target="[[_member(member, members)]]" class="member" style$="[[_index(index)]]"
+                               compact>
+                </player-status>
             </template>
         </div>
 
@@ -54,22 +92,120 @@
 
             constructor() {
                 super();
+                this.invite = [];
                 this.members = [];
                 this.target = false;
 
 
                 application.onRealmLoaded(realm => {
+                    this.members = [];
                     this.realm = realm;
                 });
 
-                application.onGameLoaded(() => {
-                    game.subscribe('character-update', target => {
-                        if (!this.target) {
-                            this.target = target;
-                            this.members = [this.target, this.target, this.target];
+                application.onGameLoaded((game) => {
+                    this.game = game;
+                    this._listen();
+                });
+            }
+
+            _listen() {
+                this.game.subscribe('player-spawn', event => {
+                    // update members when a player changes character.
+                    console.log(event);
+                    if (this.members.includes(event.account)) {
+                        console.log('player join: update target');
+                        let tmp = this.members;
+                        this.members = [];
+                        this.members = tmp;
+                        //this.notifyPath('members');
+                        this.notifySplices('members', this.members.splice());
+                        console.log(this.members);
+                    }
+                });
+
+                this.game.subscribe('player-leave', event => {
+                    // set a placeholder when a player is connected but not in the game.
+                    console.log(event);
+                    if (this.members.includes(event.account)) {
+                        console.log('player left: replace with holder');
+                        let tmp = this.members;
+                        this.members = [];
+                        this.members = tmp;
+                        //this.notifyPath('members');
+                        this.notifySplices('members', this.members.splice());
+                    }
+                });
+
+                server.connection.setHandler('party_invite', event => {
+                    this.invite = event;
+                    this._show();
+                });
+
+                server.connection.setHandler('party_leave', event => {
+                    this.members = this.members.filter(member => {
+                        return member !== event.member;
+                    });
+                    this.notifySplices('members', this.members.splice());
+                });
+
+                server.connection.setHandler('party_invite_response', event => {
+                    if (event.accepted) {
+                        this.members.push(event.from);
+                        this.notifySplices('members', this.members.splice());
+                    }
+                });
+            }
+
+            _member(account) {
+                let entity = this.game.getByAccount(account);
+                if (!entity) {
+                    return {
+                        name: account,
+                        classId: 'placeholder',
+                        stats: {
+                            energy: 0,
+                            maxenergy: 1,
+                            health: 0,
+                            maxhealth: 1,
+                            nextlevel: 1,
+                            experience: 0
+                        }
+                    };
+                }
+                return entity;
+            }
+
+            _accept() {
+                social.party_accept(event => {
+                    social.party_list(event => {
+                        this.members = [];
+                        for (let member of event.members) {
+                            if (member !== application.token.domain) {
+                                this.members.push(member);
+                            }
+                            this.notifySplices('members', this.members.splice());
                         }
                     });
-                });
+
+                }, this.invite.partyId);
+                this._hide();
+            }
+
+            _decline() {
+                social.party_decline(event => {
+                    console.log(event);
+                }, this.invite.partyId);
+                this._hide();
+            }
+
+            _show() {
+                this.$.container.style.display = 'block';
+                input.block();
+            }
+
+            _hide() {
+                this.$.container.style.display = 'none';
+                input.unblock();
             }
 
             _index(index) {
