try to change font in tooltip + send mvupdate on affliction state change.

--- a/prototype/website/src/game-app/stats-view.html
+++ b/prototype/website/src/game-app/stats-view.html
@@ -16,6 +16,7 @@
         <style>
             :host {
                 display: block;
+                font-family: 'Open Sans', sans-serif;
             }
 
             .container {
