--- a/prototype/website/src/game-app/ui/inventory-item.html
+++ b/prototype/website/src/game-app/ui/inventory-item.html
@@ -29,6 +29,7 @@
 
             .item-name {
                 font-size: large;
+                font-family: 'Open Sans', sans-serif;
             }
 
             .item-description {
@@ -72,6 +73,7 @@
             .item-info {
                 min-width: 224px;
                 max-width: 224px;
+                font-family: 'Open Sans', sans-serif;
             }
 
         </style>
