more effects - dagger throw/ethereal + fix affliction server duration.

--- a/prototype/website/src/game-app/ui/chat-box.html
+++ b/prototype/website/src/game-app/ui/chat-box.html
@@ -230,7 +230,7 @@
                         return `${message.source}: `;
                     } else {
                         if (message.name) {
-                            return message.name;
+                            return `${message.name}: `;
                         } else {
                             message.name = game.lookup(message.source).name;
                             return `${message.name}: `;
