--- a/prototype/website/src/game-app/game-login.html
+++ b/prototype/website/src/game-app/game-login.html
@@ -81,126 +81,125 @@
 
         </paper-material>
 
-        <paper-toast class="fit-bottom" id="loginToast" text="[[toasttext]]"></paper-toast>
+        <paper-toast class="fit-bottom" id="toast" text="[[toasttext]]"></paper-toast>
     </template>
-</dom-module>
+    <script>
+        class GameLogin extends Polymer.GestureEventListeners(Polymer.Element) {
 
-<script>
-    class GameLogin extends Polymer.GestureEventListeners(Polymer.Element) {
-
-        static get is() {
-            return 'game-login';
-        }
-
-        ready() {
-            super.ready();
-            this.authentication = new Authentication();
-            this.showLoginForm();
-
-            // development.
-            this.username = 'admin';
-            this.password = 'admin';
-
-            if (application.development.autologin) {
-                this.submit({keyCode: 13})
+            static get is() {
+                return 'game-login';
             }
-        }
 
-        authenticate(e) {
-            this.showToast('Authenticating..');
+            ready() {
+                super.ready();
+                this.authentication = new Authentication();
+                this.showLoginForm();
 
-            this.authentication.login({
-                accepted: (data) => {
-                    this.showToast('Loading..');
-                    this.resetForm();
-                    application.authenticated(data);
-                },
-                unauthorized: (data) => {
-                    this.showToast('Invalid user credentials');
-                    this.password = "";
-                    this.$['password'].focus();
-                },
-                missing: (data) => {
-                    this.showToast('The specified username does not exist');
-                    this.showRegisterForm();
-                    this.$['password-repeat'].focus();
-                },
-                error: (e) => {
-                    this.showToast(e.message);
-                },
-                failed: () => {
-                    application.error('Failed to establish a connection to the authentication server.', true)
+                // development.
+                this.username = 'admin';
+                this.password = 'admin';
+
+                if (application.development.autologin) {
+                    this.submit({keyCode: 13})
                 }
-            }, this.username, this.password);
-        }
+            }
 
-        register(e) {
-            if (this.password === this['passwordrepeat']) {
-                this.showToast('Registering..');
-                this.authentication.register({
+            authenticate(e) {
+                this.showToast('Authenticating..');
+
+                this.authentication.login({
                     accepted: (data) => {
                         this.showToast('Loading..');
                         this.resetForm();
                         application.authenticated(data);
                     },
-                    bad: (data) => {
-                        this.$['loginToast'].open();
-                        this.showToast('Error: ' + e);
+                    unauthorized: (data) => {
+                        this.showToast('Invalid user credentials');
+                        this.password = "";
+                        this.$['password'].focus();
                     },
-                    conflict: (data) => {
-                        this.showToast('The username is not available.')
-                        this.$['username'].focus();
+                    missing: (data) => {
+                        this.showToast('The specified username does not exist');
+                        this.showRegisterForm();
+                        this.$['password-repeat'].focus();
                     },
                     error: (e) => {
                         this.showToast(e.message);
                     },
                     failed: () => {
-                        application.error("Failed to establish a connection to the authentication server.", true)
+                        application.error('Failed to establish a connection to the authentication server.', true)
                     }
-                }, this.username, this.password, this.email);
-            } else {
-                this.showToast('Password (repeat) does not match the password.');
-                this.$['password-repeat'].focus();
+                }, this.username, this.password);
+            }
+
+            register(e) {
+                if (this.password === this['passwordrepeat']) {
+                    this.showToast('Registering..');
+                    this.authentication.register({
+                        accepted: (data) => {
+                            this.showToast('Loading..');
+                            this.resetForm();
+                            application.authenticated(data);
+                        },
+                        bad: (data) => {
+                            this.toast.open();
+                            this.showToast('Error: ' + e);
+                        },
+                        conflict: (data) => {
+                            this.showToast('The username is not available.');
+                            this.$['username'].focus();
+                        },
+                        error: (e) => {
+                            this.showToast(e.message);
+                        },
+                        failed: () => {
+                            application.error("Failed to establish a connection to the authentication server.", true)
+                        }
+                    }, this.username, this.password, this.email);
+                } else {
+                    this.showToast('Password (repeat) does not match the password.');
+                    this.$['password-repeat'].focus();
+                }
+            }
+
+            resetForm() {
+                this.password = "";
+                this["passwordrepeat"] = "";
+                this.email = "";
+                this.showLoginForm();
+            }
+
+            showLoginForm() {
+                this.title = "Login";
+                this.hideregisterform = true;
+                this.hideloginform = false;
+                this.$['username'].focus();
+            }
+
+            showRegisterForm() {
+                this.title = "Register";
+                this.hideregisterform = false;
+                this.hideloginform = true;
+                this.$['username'].focus();
+            }
+
+            showToast(text) {
+                this.set('toasttext', text);
+                this.$.toast.open();
+            }
+
+            submit(e) {
+                if (e.keyCode === 13) {
+                    if (!this.hideregisterform)
+                        this.register();
+
+                    if (!this.hideloginform)
+                        this.authenticate();
+                }
             }
         }
 
-        resetForm() {
-            this.password = "";
-            this["passwordrepeat"] = "";
-            this.email = "";
-            this.showLoginForm();
-        }
+        window.customElements.define(GameLogin.is, GameLogin);
 
-        showLoginForm() {
-            this.title = "Login";
-            this.hideregisterform = true;
-            this.hideloginform = false;
-            this.$['username'].focus();
-        }
-
-        showRegisterForm() {
-            this.title = "Register";
-            this.hideregisterform = false;
-            this.hideloginform = true;
-            this.$['username'].focus();
-        }
-
-        showToast(text) {
-            this.set('toasttext', text);
-            this.$['loginToast'].open();
-        }
-
-        submit(e) {
-            if (e.keyCode === 13) {
-                if (!this.hideregisterform)
-                    this.register();
-
-                if (!this.hideloginform)
-                    this.authenticate();
-            }
-        }
-    }
-
-    window.customElements.define(GameLogin.is, GameLogin);
-
-</script>
+    </script>
+</dom-module>
